@@ -1,9 +1,9 @@
-package com.weibo.controller;
+package com.it.controller;
 
-import com.weibo.dto.PageResult;
-import com.weibo.dto.Result;
-import com.weibo.entity.Article;
-import com.weibo.service.ArticleService;
+import com.it.common.PageResult;
+import com.it.common.Result;
+import com.it.model.Article;
+import com.it.service.ArticleService;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -12,15 +12,11 @@ import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.*;
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpSession;
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
-/**
- * 文章控制器
- * 处理文章发布、编辑、删除等功能
- * 
- * @author weibo Team
- */
 @Controller
 @RequestMapping("/article")
 public class ArticleController {
@@ -30,9 +26,6 @@ public class ArticleController {
     @Autowired
     private ArticleService articleService;
 
-    /**
-     * 获取文章列表
-     */
     @GetMapping("/list")
     @ResponseBody
     public Result<PageResult<Article>> getArticleList(@RequestParam(value = "pageNum", defaultValue = "1") Integer pageNum,
@@ -42,9 +35,6 @@ public class ArticleController {
         return articleService.getArticleList(pageNum, pageSize, tagId, keyword);
     }
 
-    /**
-     * 发布文章
-     */
     @PostMapping("/publish")
     public String publishArticle(@ModelAttribute Article article,
                              @RequestParam(value = "tagIds", required = false) String tagIdsStr,
@@ -58,29 +48,25 @@ public class ArticleController {
 
         article.setAuthor(userId);
 
-        // 处理标签
         List<Integer> tagIds = null;
         if (tagIdsStr != null && !tagIdsStr.isEmpty()) {
             String[] tagIdArray = tagIdsStr.split(",");
             tagIds = Arrays.stream(tagIdArray)
                            .map(Integer::parseInt)
-                           .toList();
+                           .collect(Collectors.toList());
         }
 
         Result<Article> result = articleService.publishArticle(article, tagIds);
 
         if (result.isSuccess()) {
-            logger.info("文章发布成功，文章ID：{}", result.getData().getArticleId());
+            logger.info("Publish successful, articleId: {}", result.getData().getArticleId());
             return "redirect:/page/home";
         } else {
-            model.addAttribute("errorMsg", result.getMessage());
+            model.addAttribute("errorMsg", result.getMsg());
             return "article_edit";
         }
     }
 
-    /**
-     * 更新文章
-     */
     @PostMapping("/update")
     public String updateArticle(@ModelAttribute Article article,
                               @RequestParam(value = "tagIds", required = false) String tagIdsStr,
@@ -92,29 +78,25 @@ public class ArticleController {
             return "redirect:/user/login";
         }
 
-        // 处理标签
         List<Integer> tagIds = null;
         if (tagIdsStr != null && !tagIdsStr.isEmpty()) {
             String[] tagIdArray = tagIdsStr.split(",");
             tagIds = Arrays.stream(tagIdArray)
                            .map(Integer::parseInt)
-                           .toList();
+                           .collect(Collectors.toList());
         }
 
         Result<Article> result = articleService.updateArticle(article, tagIds);
 
         if (result.isSuccess()) {
-            logger.info("文章更新成功，文章ID：{}", article.getArticleId());
+            logger.info("Update successful, articleId: {}", article.getArticleId());
             return "redirect:/page/article/" + article.getArticleId();
         } else {
-            model.addAttribute("errorMsg", result.getMessage());
+            model.addAttribute("errorMsg", result.getMsg());
             return "article_edit";
         }
     }
 
-    /**
-     * 删除文章
-     */
     @PostMapping("/delete/{articleId}")
     @ResponseBody
     public Result<Boolean> deleteArticle(@PathVariable("articleId") Integer articleId,
@@ -122,15 +104,12 @@ public class ArticleController {
         HttpSession session = request.getSession();
         Integer userId = (Integer) session.getAttribute("userId");
         if (userId == null) {
-            return Result.fail(401, "请先登录");
+            return Result.error(401, "Please login first");
         }
 
         return articleService.deleteArticle(articleId, userId);
     }
 
-    /**
-     * 获取热门文章
-     */
     @GetMapping("/hot")
     @ResponseBody
     public Result<List<Article>> getHotArticles(@RequestParam(value = "limit", defaultValue = "10") Integer limit) {
